Fix Cart buttons misalignment in Firefox (https://github.com/woocommerce/woocommerce-blocks/pull/1446)

--- a/plugins/woocommerce-blocks/assets/js/components/text-toolbar-button/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/components/text-toolbar-button/style.scss
@@ -1,4 +1,6 @@
 .wc-block-text-toolbar-button {
+	align-items: center;
+
 	&.is-toggled,
 	&.is-toggled:focus {
 		background: $core-grey-dark-500;
